Updated the r-svars feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71438,3 +71438,7 @@
 	url = https://github.com/conda-forge/perl-test-yaml-feedstock.git
 	path = feedstocks/perl-test-yaml
 	branch = refs/heads/main
+[submodule "r-svars"]
+	url = https://github.com/conda-forge/r-svars-feedstock.git
+	path = feedstocks/r-svars
+	branch = refs/heads/main
