Updated the r-matrixlaplacian feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71450,3 +71450,7 @@
 	url = https://github.com/conda-forge/pytest-pretty-feedstock.git
 	path = feedstocks/pytest-pretty
 	branch = refs/heads/main
+[submodule "r-matrixlaplacian"]
+	url = https://github.com/conda-forge/r-matrixlaplacian-feedstock.git
+	path = feedstocks/r-matrixlaplacian
+	branch = refs/heads/main
