--- a/.gitmodules
+++ b/.gitmodules
@@ -71462,3 +71462,7 @@
 	url = https://github.com/conda-forge/r-fauxpas-feedstock.git
 	path = feedstocks/r-fauxpas
 	branch = refs/heads/main
+[submodule "r-dgeobj"]
+	url = https://github.com/conda-forge/r-dgeobj-feedstock.git
+	path = feedstocks/r-dgeobj
+	branch = refs/heads/main
