Updated the r-rearrr feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71466,3 +71466,7 @@
 	url = https://github.com/conda-forge/r-dgeobj-feedstock.git
 	path = feedstocks/r-dgeobj
 	branch = refs/heads/main
+[submodule "r-rearrr"]
+	url = https://github.com/conda-forge/r-rearrr-feedstock.git
+	path = feedstocks/r-rearrr
+	branch = refs/heads/main
