Updated the r-rankaggreg feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71470,3 +71470,7 @@
 	url = https://github.com/conda-forge/r-rearrr-feedstock.git
 	path = feedstocks/r-rearrr
 	branch = refs/heads/main
+[submodule "r-rankaggreg"]
+	url = https://github.com/conda-forge/r-rankaggreg-feedstock.git
+	path = feedstocks/r-rankaggreg
+	branch = refs/heads/main
