Updated the log2d feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71474,3 +71474,7 @@
 	url = https://github.com/conda-forge/r-rankaggreg-feedstock.git
 	path = feedstocks/r-rankaggreg
 	branch = refs/heads/main
+[submodule "log2d"]
+	url = https://github.com/conda-forge/log2d-feedstock.git
+	path = feedstocks/log2d
+	branch = refs/heads/main
