Updated the r-rorcid feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71478,3 +71478,7 @@
 	url = https://github.com/conda-forge/log2d-feedstock.git
 	path = feedstocks/log2d
 	branch = refs/heads/main
+[submodule "r-rorcid"]
+	url = https://github.com/conda-forge/r-rorcid-feedstock.git
+	path = feedstocks/r-rorcid
+	branch = refs/heads/main
