Updated the ndvi2gif feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -39037,7 +39037,7 @@
 [submodule "ndvi2gif"]
 	url = https://github.com/conda-forge/ndvi2gif-feedstock.git
 	path = feedstocks/ndvi2gif
-	branch = refs/heads/master
+	branch = refs/heads/main
 [submodule "mkdocs-ivory"]
 	url = https://github.com/conda-forge/mkdocs-ivory-feedstock.git
 	path = feedstocks/mkdocs-ivory
