Updated the ultimate-sitemap-parser feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71534,3 +71534,7 @@
 	url = https://github.com/conda-forge/humap-feedstock.git
 	path = feedstocks/humap
 	branch = refs/heads/main
+[submodule "ultimate-sitemap-parser"]
+	url = https://github.com/conda-forge/ultimate-sitemap-parser-feedstock.git
+	path = feedstocks/ultimate-sitemap-parser
+	branch = refs/heads/main
