Updated the r-ghapps feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71538,3 +71538,7 @@
 	url = https://github.com/conda-forge/ultimate-sitemap-parser-feedstock.git
 	path = feedstocks/ultimate-sitemap-parser
 	branch = refs/heads/main
+[submodule "r-ghapps"]
+	url = https://github.com/conda-forge/r-ghapps-feedstock.git
+	path = feedstocks/r-ghapps
+	branch = refs/heads/main
