Updated the linopy feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71554,3 +71554,7 @@
 	url = https://github.com/conda-forge/htmx-flask-feedstock.git
 	path = feedstocks/htmx-flask
 	branch = refs/heads/main
+[submodule "linopy"]
+	url = https://github.com/conda-forge/linopy-feedstock.git
+	path = feedstocks/linopy
+	branch = refs/heads/main
