Updated the xrtpy feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71570,3 +71570,7 @@
 	url = https://github.com/conda-forge/pycoxmunk-feedstock.git
 	path = feedstocks/pycoxmunk
 	branch = refs/heads/main
+[submodule "xrtpy"]
+	url = https://github.com/conda-forge/xrtpy-feedstock.git
+	path = feedstocks/xrtpy
+	branch = refs/heads/main
