--- a/.gitmodules
+++ b/.gitmodules
@@ -71590,3 +71590,7 @@
 	url = https://github.com/conda-forge/r-spatstat.explore-feedstock.git
 	path = feedstocks/r-spatstat.explore
 	branch = refs/heads/main
+[submodule "autokeras"]
+	url = https://github.com/conda-forge/autokeras-feedstock.git
+	path = feedstocks/autokeras
+	branch = refs/heads/main
