--- a/.gitmodules
+++ b/.gitmodules
@@ -71602,3 +71602,7 @@
 	url = https://github.com/conda-forge/hvpy-feedstock.git
 	path = feedstocks/hvpy
 	branch = refs/heads/main
+[submodule "specialist"]
+	url = https://github.com/conda-forge/specialist-feedstock.git
+	path = feedstocks/specialist
+	branch = refs/heads/main
