Updated the about-time feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71614,3 +71614,7 @@
 	url = https://github.com/conda-forge/plottable-feedstock.git
 	path = feedstocks/plottable
 	branch = refs/heads/main
+[submodule "about-time"]
+	url = https://github.com/conda-forge/about-time-feedstock.git
+	path = feedstocks/about-time
+	branch = refs/heads/main
