Updated the pybindgen feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71622,3 +71622,7 @@
 	url = https://github.com/conda-forge/ringspy-feedstock.git
 	path = feedstocks/ringspy
 	branch = refs/heads/main
+[submodule "pybindgen"]
+	url = https://github.com/conda-forge/pybindgen-feedstock.git
+	path = feedstocks/pybindgen
+	branch = refs/heads/main
