Updated the perl-module-build-tiny feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71634,3 +71634,7 @@
 	url = https://github.com/conda-forge/perl-extutils-installpaths-feedstock.git
 	path = feedstocks/perl-extutils-installpaths
 	branch = refs/heads/main
+[submodule "perl-module-build-tiny"]
+	url = https://github.com/conda-forge/perl-module-build-tiny-feedstock.git
+	path = feedstocks/perl-module-build-tiny
+	branch = refs/heads/main
