Updated the r-adiv feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71650,3 +71650,7 @@
 	url = https://github.com/conda-forge/perl-extutils-config-feedstock.git
 	path = feedstocks/perl-extutils-config
 	branch = refs/heads/main
+[submodule "r-adiv"]
+	url = https://github.com/conda-forge/r-adiv-feedstock.git
+	path = feedstocks/r-adiv
+	branch = refs/heads/main
