Updated the pyphonetics feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71658,3 +71658,7 @@
 	url = https://github.com/conda-forge/drf-dynamic-fields-feedstock.git
 	path = feedstocks/drf-dynamic-fields
 	branch = refs/heads/main
+[submodule "pyphonetics"]
+	url = https://github.com/conda-forge/pyphonetics-feedstock.git
+	path = feedstocks/pyphonetics
+	branch = refs/heads/main
