Updated the lightpath feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71698,3 +71698,7 @@
 	url = https://github.com/conda-forge/drf-flex-fields-feedstock.git
 	path = feedstocks/drf-flex-fields
 	branch = refs/heads/main
+[submodule "lightpath"]
+	url = https://github.com/conda-forge/lightpath-feedstock.git
+	path = feedstocks/lightpath
+	branch = refs/heads/main
