Updated the lotterycn feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71726,3 +71726,7 @@
 	url = https://github.com/conda-forge/throttler-feedstock.git
 	path = feedstocks/throttler
 	branch = refs/heads/main
+[submodule "lotterycn"]
+	url = https://github.com/conda-forge/lotterycn-feedstock.git
+	path = feedstocks/lotterycn
+	branch = refs/heads/main
