--- a/.gitmodules
+++ b/.gitmodules
@@ -71746,3 +71746,7 @@
 	url = https://github.com/conda-forge/r-shinymobile-feedstock.git
 	path = feedstocks/r-shinymobile
 	branch = refs/heads/main
+[submodule "dcmtk"]
+	url = https://github.com/conda-forge/dcmtk-feedstock.git
+	path = feedstocks/dcmtk
+	branch = refs/heads/main
