Updated the perl-io-pager feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71754,3 +71754,7 @@
 	url = https://github.com/conda-forge/perl-termreadkey-feedstock.git
 	path = feedstocks/perl-termreadkey
 	branch = refs/heads/main
+[submodule "perl-io-pager"]
+	url = https://github.com/conda-forge/perl-io-pager-feedstock.git
+	path = feedstocks/perl-io-pager
+	branch = refs/heads/main
