Updated the fortnet feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71758,3 +71758,7 @@
 	url = https://github.com/conda-forge/perl-io-pager-feedstock.git
 	path = feedstocks/perl-io-pager
 	branch = refs/heads/main
+[submodule "fortnet"]
+	url = https://github.com/conda-forge/fortnet-feedstock.git
+	path = feedstocks/fortnet
+	branch = refs/heads/main
