--- a/.gitmodules
+++ b/.gitmodules
@@ -71798,3 +71798,7 @@
 	url = https://github.com/conda-forge/goes2go-feedstock.git
 	path = feedstocks/goes2go
 	branch = refs/heads/main
+[submodule "trufflehog"]
+	url = https://github.com/conda-forge/trufflehog-feedstock.git
+	path = feedstocks/trufflehog
+	branch = refs/heads/main
