Updated the trufflehogregexes feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71810,3 +71810,7 @@
 	url = https://github.com/conda-forge/xlrd3-feedstock.git
 	path = feedstocks/xlrd3
 	branch = refs/heads/main
+[submodule "trufflehogregexes"]
+	url = https://github.com/conda-forge/trufflehogregexes-feedstock.git
+	path = feedstocks/trufflehogregexes
+	branch = refs/heads/main
