Updated the jiwer feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71818,3 +71818,7 @@
 	url = https://github.com/conda-forge/pyinfra-feedstock.git
 	path = feedstocks/pyinfra
 	branch = refs/heads/main
+[submodule "jiwer"]
+	url = https://github.com/conda-forge/jiwer-feedstock.git
+	path = feedstocks/jiwer
+	branch = refs/heads/main
