Updated the virocon feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71822,3 +71822,7 @@
 	url = https://github.com/conda-forge/jiwer-feedstock.git
 	path = feedstocks/jiwer
 	branch = refs/heads/main
+[submodule "virocon"]
+	url = https://github.com/conda-forge/virocon-feedstock.git
+	path = feedstocks/virocon
+	branch = refs/heads/main
