--- a/.gitmodules
+++ b/.gitmodules
@@ -71846,3 +71846,7 @@
 	url = https://github.com/conda-forge/koda-feedstock.git
 	path = feedstocks/koda
 	branch = refs/heads/main
+[submodule "python-redmine"]
+	url = https://github.com/conda-forge/python-redmine-feedstock.git
+	path = feedstocks/python-redmine
+	branch = refs/heads/main
