Updated the perl-ipc-system-simple feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71858,3 +71858,7 @@
 	url = https://github.com/conda-forge/perl-io-null-feedstock.git
 	path = feedstocks/perl-io-null
 	branch = refs/heads/main
+[submodule "perl-ipc-system-simple"]
+	url = https://github.com/conda-forge/perl-ipc-system-simple-feedstock.git
+	path = feedstocks/perl-ipc-system-simple
+	branch = refs/heads/main
