Updated the django-filebrowser feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71862,3 +71862,7 @@
 	url = https://github.com/conda-forge/perl-ipc-system-simple-feedstock.git
 	path = feedstocks/perl-ipc-system-simple
 	branch = refs/heads/main
+[submodule "django-filebrowser"]
+	url = https://github.com/conda-forge/django-filebrowser-feedstock.git
+	path = feedstocks/django-filebrowser
+	branch = refs/heads/main
