Updated the libhxl feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71866,3 +71866,7 @@
 	url = https://github.com/conda-forge/django-filebrowser-feedstock.git
 	path = feedstocks/django-filebrowser
 	branch = refs/heads/main
+[submodule "libhxl"]
+	url = https://github.com/conda-forge/libhxl-feedstock.git
+	path = feedstocks/libhxl
+	branch = refs/heads/main
