Updated the wecopttool feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71870,3 +71870,7 @@
 	url = https://github.com/conda-forge/libhxl-feedstock.git
 	path = feedstocks/libhxl
 	branch = refs/heads/main
+[submodule "wecopttool"]
+	url = https://github.com/conda-forge/wecopttool-feedstock.git
+	path = feedstocks/wecopttool
+	branch = refs/heads/main
