Updated the quantulum3 feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71878,3 +71878,7 @@
 	url = https://github.com/conda-forge/pygeofilter-feedstock.git
 	path = feedstocks/pygeofilter
 	branch = refs/heads/main
+[submodule "quantulum3"]
+	url = https://github.com/conda-forge/quantulum3-feedstock.git
+	path = feedstocks/quantulum3
+	branch = refs/heads/main
